--- a/app/src/main/res/layout/show_user_row.xml
+++ b/app/src/main/res/layout/show_user_row.xml
@@ -45,6 +45,8 @@
         android:background="?android:selectableItemBackground"
         app:srcCompat="@drawable/ic_more_options_row"
         android:layout_marginEnd="14dp"
+        android:focusable="false"
+        android:clickable="false"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true" />
 
